HomePage.css
body{
    background-color: gray;
    box-sizing: border-box;
    overflow-x: hidden;
}

html{
    scroll-behavior: smooth;
}

/*Navagation Bar*/
nav{
    width: 100%; /*new*/
    overflow-x: hidden;
    background-color: transparent;
    padding: 2%;
    height: 5vh;
}

.nav-items{
    display: flex;
    justify-content:space-evenly;
}

.nav-items a{
    text-decoration: none;
    padding: 1%;
    color:white;
    font-size:1.6rem;
    border-radius: 2rem;
}

.nav-items a:hover{
    background-color: gray;
}

/*HomePage Particles*/
.particles {
    width: 100%;
    height: 90vh;
    overflow: hidden;
}

.dots {
    display: flex;
}

.dots span {
    width:0.3125rem;
    height:0.3125rem;
    background: white;
    margin: 0 4.6875rem;
    border-radius: 6.25rem;
    box-shadow:
            0 0 0 0.625rem black,
            0 0 3.125rem white;
    animation: animate 15s linear infinite;
    animation-duration: calc(120s/var(--i));
}

.dots span:nth-child(even) {
    background: white;
    border-radius: 50%;
    box-shadow:
            0 0 0 0.625rem white;
}

@keyframes animate {
    0% {
        transform: translateY(100vh) scale(0);
    }

    100% {
        transform: translateY(-10vh) scale(.5);
    }
}

/*Front Page*/
.mainContainer{
    display: flex;
    width: 100%;
    height: 70vh;
}

.leftContainer, .rightContainer{
    flex: 1;
    height: 60vh;
}

/*LEFT SIDE OF MAIN*/
.leftContainer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

    /* Welcome Title */
.title {
    background: linear-gradient(to right, gray, white, gray);
        -webkit-background-clip: text;
    color: transparent;
    font-size: 2.5rem;
}

.topTitle {
    color: white;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    animation:
        typing 3s steps(19) 1s forwards,
        cursor .4s step-end infinite alternate;
}

.bottomTitle {
    color: white;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    animation:
        typing 3s steps(19) 3s forwards,
        cursor .4s step-end infinite alternate;
}

@keyframes cursor {
    50% {
        border-color: white;
    }
}

@keyframes typing {
    from {
        width: 0;
    }

    to {
        width: 100%;
    }
}

    /*Home Page Buttons*/
.downloadButton {
    background-color: white;
    color: black;
    padding: 1%;
    border-radius: 1rem;
    text-decoration: none;
    width: 6.25rem;
    height: 1.25rem;
    font-weight: bold;
}

.social {
    width: 31.25rem;
    height: 6.25rem;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5%;
}

.social1 {
    width: 2.8125rem;
    height: 2.8125rem;
}

.social2 {
    width:3.75rem;
    height: 3.75rem;
}

.downloadButton:hover {
    background-color: gray;

}

.social1:hover {
    width: 3.125rem;
    height: 3.125rem;
}

.social2:hover {
    width: 5.9375rem;
    height: 5.9375rem;
}

/*RIGHT SIDE OF MAIN*/
.rightContainer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

    /*3D IMAGE*/
pre {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    padding: 1rem;
    border-radius: 1rem;

    max-width: 100%;
    max-height: 100%;
    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);

    transform-style: preserve-3d;
    transform: perspective(187.5rem) rotateY(var(--rotateX)) rotateX(var(--rotateY));
}




/*About ME Section*/

#aboutSection {
    color: white;
    font-size: 1.875rem;
    margin-left: 3%;
    height: 55vh;
    overflow: hidden;
}

.mainContainer2{
    display: flex;
    width: 100%;
    height: 55vh;
    overflow: hidden;
}

.leftContainer2,
.rightContainer2 {
    flex: 1;
    height: 30vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


.aboutmeTitle {
    width: 100%;
    display: flex;
    justify-content: flex-start;
}

.aboutmeText {
    font-size: 1.5rem;
    font-family: 'Times New Roman';
    border: 0.313rem solid white;
    border-radius: 3.125rem;
    padding: 1.25rem;
}

.captions{
    display: flex;
    gap: 2.5rem;
    font-size: 1.125rem;
}
.dates{
    display: flex;
    gap: 23rem;
    font-size: 1.125rem;
}

.aboutSectionImg{
    width: 3.75rem;
    height: 3.75rem;
    position: absolute;
    top: 50%;
    left: 87%;
    transform: translate(-50%, -50%);
    z-index: 10;
}

.temple-logo{
    width: 20%;
}

.skill{
    width: 56%;
    /* margin: 60px auto; */
    color: white;
    padding: 3%;
    box-shadow: 0 0.875rem 1.75rem rgb(0, 0, 0, 0.25), 0 0.625rem 0.625rem rgb(0, 0, 0, 0.22);
    position: relative;
}

.bar{
    background-color: white;
    display: block;
    height: 1.25rem;
    border: 0.063rem solid white;
    border-radius: 0.625rem;
    overflow: hidden;
    box-shadow: 0 0.0625rem 0.1875rem rgb(0,0,0,0.12), 0 0 0.0625rem 0.125rem rgb(0, 0,0, 0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    position: relative;
    z-index: 0;
}

.bar:hover{
    box-shadow: 0 0.875rem 1.75rem rgb(0, 0, 0, 0.25), 0 0.625rem 0.625rem rgb(0, 0, 0, 0.23);
}

.bar span{
    height: 1.25rem;
    float: left;
    background:linear-gradient(135deg, rgba(236,0,140,1)0%,rgba(252,103,103,1)100%);
}

.html{
    width: 67%;
    animation: html 3%;
}


/*Experience Section*/
#experienceSection {
    color: white;
    font-size: 30px;
    margin-left: 3%;
    height: 110vh;
}

.mainContainer3{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 110vh;
}

.exSubMain{
    display: flex;
    flex-direction: row;
}

.leftContainer3,
.rightContainer3 {
    flex: 0 0 44%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.middleContainer3{
    flex: 0 0 10%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
}

.experienceTitle{
    width: 100%;
    display: flex;
    justify-content: flex-start;
}
.experienceSubTitle{
    top: 0;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    font-size: 1.25rem;
}

.experienceSub{
    padding: 2% 5%;
    width: 40%;
    background-color: transparent;
}

.experienceImg{
    display: flex;
    flex-direction: column;
    border-radius: 50%;
    width:3.125rem;
    top: 0%;
    margin: 4.375rem 0;
    position: relative;
    z-index: 1;
}

.middleContainer3::after{
    content:"";
    position: absolute;
    height: 70vh;
    left: 47%;
    top: 10%;
    bottom: 0;
    width: 5%;
    background: white;
    z-index: 0;
}


p{
    font-weight: normal;
    font-size: 1.25rem;
}

.experienceText{
    color: black;
}

.experienceText:hover{
    color: white;
}

.DD {
    background: linear-gradient(90deg, #f58220, #ff3399);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin-bottom:0.625rem ;
}

.EL {
    background: linear-gradient(90deg, #040A2B, #FFFFFF);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin-bottom: 0.625rem;
}

.TU{
    background: linear-gradient(to right, #A32036, #FFFFFF);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin-bottom: 0.625rem;
}



/*Project Section*/
#projectSection {
    color: white;
    font-size: 1.875rem;
}

.mainContainer4{
    width: 100%;
    height: 80vh;
}

.projectHeading{
    width: 100%;
    height: 10vh;
    text-align: center;
}

.subMain{
    display: flex;
    justify-content: center;
    gap: 5%;
    width: 100%;
    height: 60vh;
    margin-top: 5%;
}
.leftContainer4,
.rightContainer4,.middleContainer4 {
    flex: 0 0 33%;
    height: 60vh;
    display: flex;
    flex-direction: column;
    gap:10%;
    align-items: center; 
}

.leftContainer4{
    flex-basis: 20%;
    border: 0.3125rem solid #A32036;
    transition: all 1s;
}

.leftContainer4:hover {
    background-color: black;
    box-shadow: 0 0 1.5625rem #A32036,
        0 0 3.125rem #A32036,
        0 0 6.25rem #A32036;
}

.middleContainer4{
    flex-basis: 20%;
    border: 0.3125rem solid #040A2B;
    transition: all 1s;
}

.middleContainer4:hover {
    background-color: black;
    box-shadow: 0 0 3.125rem #040A2B,
        0 0 6.25rem #040A2B,
        0 0 12.5rem #040A2B;
}

.rightContainer4{
    flex-basis: 20%;
    border: 0.3125rem solid #B87333;
    transition: all 1s;
}

.rightContainer4:hover{
    background-color: black;
    box-shadow: 0 0 1.5625rem #B87333,
        0 0 3.125rem #B87333,
        0 0 6.25rem #B87333;
}

.subProjectImg,
.subProjectImg-2,
.subProjectImg-3 {
    width: 10rem;
    height: 10rem;
    display: none;
}

.leftContainer4:hover .subProjectImg,
.middleContainer4:hover .subProjectImg-2,
.rightContainer4:hover .subProjectImg-3 {
    display: block;
}

.projectOneBtn, 
.projectTwoBtn, 
.projectThreeBtn, 
.projectOneBtn-2,
.projectTwoBtn-2,
.projectThreeBtn-2{
    width: 6.25rem;
    height: 3.125rem;
    padding: 0.625rem;
    border: 0.125rem;
    border-radius: 1.25rem;
}
.projectOneBtn:hover,
.projectTwoBtn:hover,
.projectThreeBtn:hover, 
.projectOneBtn-2:hover, 
.projectTwoBtn-2:hover, 
.projectThreeBtn-2:hover {
    background-color: gray;
}


/*Techincal Skills*/
#skillSection{
    margin-top: 10%;
    color: white;
    font-size: 1.875rem;
}

.mainContainer5{
    width: 100%;
    height: 40vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.leftContainer5,.rightContainer5{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 2%;
    font-size: 1.5rem;
}

.skillSectionHeading{
    color: white;
    font-size: 1.875rem;
    margin-left: 3%;
}

.skillImg{
    height: 5rem;
    width: 5rem;
}



/*Contact*/
#contactSection {
    margin-top: 10%;
    height: 30vh;
    margin-bottom: 10%;
}

.mainContainer6{
    width: 100%;
    height: 30vh;
    display: flex;
    justify-content: center;
}

.middleContainer6{
    width: 50%;
    height: 30vh;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.emailBox{
    display: flex;
    justify-content: center;
    border: rgb(53, 53, 53)0.1 rem solid;
    border-radius: 2rem;
    border-color: white;
    background-color: aliceblue;
    text-decoration: none;
    color: black;
    margin:2rem auto;
    width: 28.125rem;
}

.emailBox:hover{
    background-color: white;
        box-shadow: 0 0 0.3125rem white,
            0 0 0.625rem white,
            0 0 1.25rem white;
}

.email-info{
    display: flex;
    align-items: center;
    justify-content: center;
    gap:1rem;
    margin: 1rem 0;
    font-size: 1.25rem;
}

.email-info a {
    color: black;
    text-decoration: none;
}

.social-icon{
    width: 3.125rem;
    height: 3.125rem;
}

.social-icon2{
    width: 2rem;
    height: 2rem;
    margin-bottom: 3%;
}

